--- a/deep_learning/CNN/convolutions.ipynb
+++ b/deep_learning/CNN/convolutions.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -98,7 +98,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY8AAAEICAYAAACnL3iHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl4VNX5wPHvm4R9CVvYwbCJAgpqRLCCCBQQF7AuRVul\nrUutS+vSVlxal2rVtmp/Wjfqbt2p1gVQQRAEWQzIjkjYdyJb2AIkeX9/zE2YhMkymTtz5868n+eZ\nJ3fO3d7cwLxzzrn3HFFVjDHGmHCkeB2AMcYY/7HkYYwxJmyWPIwxxoTNkocxxpiwWfIwxhgTNkse\nxhhjwmbJw8QNEblPRP7jLGeKiIpImtdxlRUcZznr14rI4AjPMVFERlew/hUReTCSc8SaH2M25bPk\nYVwT6kNTRH4hIjNiGENfEdkrIqlBZf8up+y5WMUVLlU9V1Vfhdhew3hO2ia+WPIwiSabwL/rU4PK\n+gEby5T1B6aHe3D7UDUmwJKHiSkRaS0i/xWRXBFZIyK/DWO/j0Rkp4jkiMi1obZT1SPAbALJARFp\nDtQE3i1TdjxO8qjo2E4T1TgR+Y+I5AG/CBHblSKyTkR2iMjdFfwOHURkt4ikOO//LSLbg9a/LiK3\nOMtfisg1InIi8BzQV0T2icjuoEM2FpHxTq1qjoh0CjrWmSLyjYjscX6eGbSuVA2xTDNccULd7Zyv\nb4jfI0VExojIKud3fldEmgStP0tEvnZ+1w0iEnzNqhWziT+WPEzMOB+aHwMLgTbAIOAWERlahd3f\nJlB7aA1cAvxVRAaWs+10nETh/JzhvILL1qjqxioeewQwDmgEvFHmd+oGPAtc6ezfFGgbKihVXQPk\nAacExbHPSRAAZwPTyuyzHLgemKWq9VW1UdDqUcD9QGMgB3jIiakJMB540onncWC8iDQNFVcZxdeo\nkXO+WSG2uRkY6cTbGtgFPO2c+zhgIvAUkAH0AhZEOWbjAUsexm3/c75x7na+JT8TtO50IENVH1DV\nw6q6Gvg3gQ+UcolIO+BHwB2qmq+qC4AXgKvK2WUacJaICIEmq6+AWUCfoLJpYRx7lqr+T1WLVPVg\nmXNdAnyiqtNV9RDwJ6Cogl9nGnC2iLR03o9z3ncAGhJIrFX1garOVdUCAkmtl1N+HrBSVV9X1QJV\nfQv4DrggjGNX5HrgblXd6PzO9wGXOE16VwCTVfUtVT2iqjuca+p1zMZlljyM20aqaqPiF3BD0Lrj\ngNZlkstdQItKjtka2Kmqe4PK1hGovYQyG6gP9CDwTforVd0HbAgqK26eqcqxN1QSW8l6Vd0P7Khg\n+2nAgKAYviTwDf5sJ86KEk9ZW4OWDxD4nYtjWldm24quV7iOAz4I+hsuBwoJ/B3bAasq2NermI3L\nLHmYWNpAoLmoUdCrgaoOr2S/zUATEWkQVNYe2BRqY1XNB74h8K21lap+56z6yik7maPJoyrHrmjo\n6S0EPjABEJG6BJpdyjONQM1ngLM8g0DN55gmqyqeP5TNBD7ggwX/TvuBukHrWgYtV+VcG4Bzy/wd\na6vqJmddp0r2r07MJs5Y8jCxNBfYKyJ3iEgdEUkVkR4icnpFO6nqBuBr4GERqS0iJwNXA+U+a0Eg\nOfzO2a/YDKdsi6quiuDYwcYB5zudxDWBB6jg/5WqrgQOAj8HpqlqHrANuJjyk8c2oK1z/KqYABwv\nIleISJqI/BToBnzirF8AjBKRGiKSRaDprVgugWa3jhUc/zngIad/AxHJEJERzro3gMEicplz7qYi\n0qvcI1U9ZhNnLHmYmFHVQuB8Au3ca4AfCPQvpFdh98uBTALfUD8A7lXVyRVsPw1oTiBhFJvhlH0V\n4bFLqOpS4EbgTQK1kF0EOt8rMg3Y4SSu4vcCzC9n+ynAUmCriPxQhZh2ELjOtxNoQvsjcL6qFu/7\nJwK1g10EOq/fDNr3AIFO7JlOs1SfEKf4P+Aj4HMR2UugmfAMZ//1wHDn3DsJJKqeLsRs4ozYZFDG\nGGPCZTUPY4wxYbPkYYwxJmyWPIwxxoTNkocxxpiwJewgb82aNdPMzEyvwzDGGF+ZN2/eD6qaUdl2\nCZs8MjMzyc7O9joMY4zxFREp+6R/SNZsZYwxJmyWPIwxxoTNkocxxpiwWfIwxhgTNksexhhjwmbJ\nwxhjTNgseRhjjAmbJQ9jElz+kULGzduIjaBt3JSwDwkaYwL+9ukKXpq5hib1ajDwhMpm/DWmaqzm\nYUwCm/59Li/NXAPA89NW88O+Q6XWb92TT/6RQi9CMz5nycOYBHbVS3NLlues2clNbwYmK9ybf4Q/\n/W8JfR7+gl+/Ps+r8IyPWbOVMUlk9uqdTFy8hc+XbeODbzcBMO37XI+jMn5kNQ9jksxv3phfkjiK\n3fzWtx5FY/zKkocxho8Xbgbgk0Wb2bX/sMfRGD+w5GGMAWDLnoPc9Oa3/OYN9/pAtu7J57LnZ1lC\nSkCWPIwxAKzYuheAzbvzXTvm2OmrmbtmJ/+dv9G1Y5r4YMnDGAPAL17+BoD1Ow+wfscBj6Mx8c6S\nhzEJKpK7qPr/fWpE595R5nkSk3gseRiToEYHPeMRS9+u38VpD07mwwWbKt/Y+JYlD2MSxKGCQhZu\n2O3a8SYt2xb2PgWFRSUx/OG9Rbw3b4Nr8Zj44kryEJGXRGS7iCwJKrtPRDaJyALnNTxo3Z0ikiMi\nK0RkaFD5aSKy2Fn3pIiIU15LRN5xyueISKYbcRuTSO77aCkjnp7pWn/Fta9ls3n3wbD2ufBfM7nv\n42UAHC4sYm9+gSuxmPjjVs3jFWBYiPInVLWX85oAICLdgFFAd2efZ0Qk1dn+WeBaoIvzKj7m1cAu\nVe0MPAE86lLcxiSMxZv2ALDn4BHXjnmooCis7ZdtyXPt3Ca+uZI8VHU6sLOKm48A3lbVQ6q6BsgB\neotIK6Chqs7WwNjRrwEjg/Z51VkeBwwqrpUYY2DDzgMs2eTdB/ehgkJ+8szMctc/OH45Q56YFsOI\nTLRFu8/jZhFZ5DRrNXbK2gDBDaEbnbI2znLZ8lL7qGoBsAdoWvZkInKdiGSLSHZuro3XY5JHv78d\nvTtKcXfejvs/XspdHyyucJtV2/czf33F/S3fb9vHss1WM0kU0UwezwIdgV7AFuCxKJ4LAFUdq6pZ\nqpqVkZER7dMZE5dU4eJnv3blWE9NWcnLM9fy5pz1PPNlTsgJpY4UFrH7QNWeIB/+5Fc2EGOCiFry\nUNVtqlqoqkXAv4HezqpNQLugTds6ZZuc5bLlpfYRkTQgHdgRrdiN8bMiVeat2+XKsd6ff/R22799\nuqKkdjF3zU4yx4znlZlrGDV2Nle8MKfKx1y3Y78rsRlvRS15OH0YxS4Ciu/E+ggY5dxB1YFAx/hc\nVd0C5IlIH6c/4yrgw6B9RjvLlwBT1ObUNCbmCouUO99fzGXPzwLgvo+XuZaojL+4Mp+HiLwFDACa\nichG4F5ggIj0AhRYC/waQFWXisi7wDKgALhRVYunMruBwJ1bdYCJzgvgReB1Eckh0DE/yo24jTHh\nmb16B2/NXR/RMexrX2JwJXmo6uUhil+sYPuHgIdClGcDPUKU5wOXRhKjMSZyj0/63usQTJywJ8yN\nSTDPTVvldQgmCVjyMCbBfLY0/GFFjAmXJQ9jTEy9880G3rf5PXzPkocxJqaWbcnjtncXeh2GiZAl\nD2N85Nv1u8gcM55tee7N9mdMdVjyMMZHXvl6LQCzVh19Rvb1WWs9icUkN0sexvjcnz5c6nUIJglZ\n8jDGh9we/NCYcFnyMMYYEzZLHsb40NTvcikqstqH8Y4lD2N8pHgGtI8WbualmWs8jcUkN1fGtjLG\nxEZwXePB8cupUzO13G2NiSareRjjY89M9e84Vpt2H/Q6BBMBSx7G+IhUvolv/OiRKTaroI9Z8jDG\nJ1SVI4V6TJmffb50K6tz93kdhqkGSx7G+MTTU3MYv3iL12G46o056xn42DSvwzDVYMnDGJ8YN+/Y\nkWg377Exrow3LHkYYzw38LEvWWXNV75iycMYnxBJpO7y0lbn7uff01d7HYYJgyUPY4wxYbPkYXyl\noLDI5rJIULsOHGb9jgPc/u5CttvfOO7ZE+Ymrq3K3cfBw4X0aJMOwP0fL+P12etYeO8Q0uvU8Dg6\n46bPlm4rmX/9cGERT11+iscRmYq4UvMQkZdEZLuILAkqayIik0RkpfOzcdC6O0UkR0RWiMjQoPLT\nRGSxs+5JcRp5RaSWiLzjlM8RkUw34jbxb9Bj0zj/qRnMXbOTQY99yeuz1wGw/1CBx5HFXuL2eBg/\ncqvZ6hVgWJmyMcAXqtoF+MJ5j4h0A0YB3Z19nhGR4gF6ngWuBbo4r+JjXg3sUtXOwBPAoy7FnfQW\nbNjNnNU7Kt/QY5c9P4tVuftL3vv70bjwPf75Clb/sL/yDROE3x9+TAauJA9VnQ7sLFM8AnjVWX4V\nGBlU/raqHlLVNUAO0FtEWgENVXW2Bv7lvFZmn+JjjQMGSSLfehJDI5+eyU/HzvY6jLAl24fLk1Ny\nvA7BmFKi2WHeQlWLH4fdCrRwltsAG4K22+iUtXGWy5aX2kdVC4A9QNOyJxSR60QkW0Syc3NtzJxw\n7IvDZqClm/d4HYLxiH03jH8xudvKqUlE/auiqo5V1SxVzcrIyIj26XzvxRlH54Poce9n7D5w2MNo\njnXekzPKXff6rHVJV/tIJva3jX/RTB7bnKYonJ/bnfJNQLug7do6ZZuc5bLlpfYRkTQgHYj/hvo4\n95dPlpV63+uBSR5FcqwlmyqudTw/fTXj5m3kxjfnx2WtyU0PT1judQjGHCOayeMjYLSzPBr4MKh8\nlHMHVQcCHeNznSauPBHp4/RnXFVmn+JjXQJMUftqktDOf6r8WkexP4xbxPhFW+hx72cs3LA7BlF5\n4/kkfPLamq3in1u36r4FzAK6ishGEbkaeAT4sYisBAY771HVpcC7wDLgU+BGVS10DnUD8AKBTvRV\nwESn/EWgqYjkALfh3LllEtMr1ZhedUKCjTab7Oy7Yfxz5SFBVb28nFWDytn+IeChEOXZQI8Q5fnA\npZHEaEpbsXWv1yGU676Pl1W+URn2UWNMbNnwJEnog283MvSf00Ou+2TRZgDen7+Rb9fv4upXvuHD\nBZtCbmtMtMxevZNPl1htMp5Z8khCt76zsNx1N735LQC3vbuQi575mi++287v3l7AiKdnxvWYUtbM\nkVh+2HeI6/8z3+swTAUseSSR9+dv5LZ3FlS6XeaY8ceULdywm58+PysaYZXyy5fnVms/yx3GxJYN\njJhEbnu3/BpHVazfecClSMo3dYU93Bns7bnrvQ7BmJCs5mGqLJ6/3MdzbJEY8/5ir0MwJiRLHiZu\nrN8R/ZqN8Zd7/reYnfsPk3+kkLs/WMyeA0cA+G5rHnn5R0rem9izZqsk8eQXK70OoUJFRUr/v0+t\n9v4vzljDr/t3pHnD2i5GZbz2n9nr+c/so013uw4cZkDX5vxx3KKSsi7N6/Pa1b1plV7HixCTltU8\nksTjk76P+Bhud0qvzt1H5pjxfL9tryvNTr3/+gXrduynoLDIhaOZeDRh8dZSiQNg5fZ9vPPNhnL2\nMNFiycOE5c057nXgFj8V7uZzJGf//Usenvida8czxoRmycOE5a4PFjP1u+2VbxgGt2s0U1eUH9/L\nM9fw6ZKt7p4wSsb8d1HlGxkApn63ndk+mNQskVjySGAFhUVRGWb99vciu+U36spJRpljxnP/x8u4\n/j/zYhtPNb1tTTFVtnDjHkb5cFIzP7PkkaBW5e7jD+MW0euBSa73Abj9NPe363ezuJIh2I0x8cWS\nRwLalpfPoMem8cG3gb6EzndPrGSP8Ow6cIRXZq7hh32HIjpO8bDbs1bvYOTTM90IDYCNuw5yqKCw\nVNn89bvK3X7DzgNsiMEDkMYkEkseCWhXDGYEvO/jZfwmTpt/DhcWHXNHzk+e+brc7fv9bSr9/lb9\n24SjYef++JrV0S9m5vzgdQhJw5KHqbZ563ZxJE5vi/2yCsOcLNq4m+Vb8mIQTfhO/Uv8zOroJz97\nYQ7TvrchbmLBHhJMQNvyImtOqqoiDXzI7c0v4JbBXbhl8PFV3jdn+z7+/tmKqMVWWb/MNa9mM3n5\ntqid33hn2574Hf05kVjNI8Fs2n2Q0S9Vb2Ta6tibH5g//J+TV/L79xaSs71qk0y9OCP82QLDUVmX\nviUOYyJjySPBbPdwzo1x8zYy8uny+xaCRXuK6r35BewKs99g/CKbfCgRaMIOkxlfLHkkgMwx4/nn\n5MDwIynR/lSuxP7DBVXaLhZR/vzFOWSOGR9yfpJQbnzT+8mHDhUUVjleY7xkySNB/HNyYOBDr5OH\navzM6rd0c3x2hlfERomN3PqdB9iy56DXYSQ8Sx4+V/aD2uPcAcCY/1Y+B0U8xBmX7LpE7Ompq+j7\n8BSvw0h4UU8eIrJWRBaLyAIRyXbKmojIJBFZ6fxsHLT9nSKSIyIrRGRoUPlpznFyRORJEfv4KSxS\nOtw5oeR95pjx/Gf2Og8jCngn24bVqC6x7OEamx8mumJV8zhHVXupapbzfgzwhap2Ab5w3iMi3YBR\nQHdgGPCMiKQ6+zwLXAt0cV7DYhR73Ar1jIVfxkOyD0kTbf3/PpUFG3Z7HUbC8qrZagTwqrP8KjAy\nqPxtVT2kqmuAHKC3iLQCGqrqbA2007wWtE/SipOuhWqJ13rjgRAd/pt3H2Txxj0h17lJVXn167VR\nPUeyWfvDfq9DSFixeEhQgckiUgg8r6pjgRaqWnxf5FaghbPcBggeGnOjU3bEWS5bboyruv35M9Y+\nch4QmECr7AyMxeuiYUbOD/xrak7Ujm+Mm2JR8zhLVXsB5wI3ikj/4JVOTcKV79Aicp2IZItIdm5u\n4g9REM/3s/9rSsXT3sZpxQOAPQcDdzzFeureQ0fic6gXY0KJevJQ1U3Oz+3AB0BvYJvTFIXzs3j2\nnk1Au6Dd2zplm5zlsuVlzzVWVbNUNSsjI8PtXyXuFMVv7uAfn0c+7a1Xet7/OQ9PWB7z86bYvY/G\nR6L6z1VE6olIg+JlYAiwBPgIGO1sNhr40Fn+CBglIrVEpAOBjvG5ThNXnoj0ce6yuipon6RV5NNO\nj8MFRcxdW/4Q6fHg+emrQ5ZHc+h2u4nA+Em0v+u0AGaIyEJgLjBeVT8FHgF+LCIrgcHOe1R1KfAu\nsAz4FLhRVYsnZrgBeIFAJ/oqwN1JKnxI47yV4xcvz2XWqsDUoEVFWtIc9NcJy+N2NNvKRGvo9m15\n+fzylW+icuxkFs9Nu34X1Q5zVV0N9AxRvgMYVM4+DwEPhSjPBnq4HaOfxft/jC9X5PLlilzuvaAb\n78/fVDJbYJ0aqZXsmXxem7XW6xAS0q3vLGTz7nxuPKez16EkHGtl9bF47vMIdv/Hy0pNM3vwSGEF\nW8c/t2//3J6Xz9NTV7l6THNUNIf+T2aWPHzMZk3zxoB/fMmExe6NwHvHfxdVvpExccaSh499vHCz\n1yEkrRvemO9K8v5o4WamVmHWQ2PijSUPH/NJq1XC+tkLc1iVu6/a+9/27gJ++9a3LkZkTOzYNLQ+\nVuSXTo8ENmvVDjpl1A9rn9mrd/Dop9/x7Xobd8n4lyUPH/Prcx6J5J7/LaFTRn36dmpa5X1GjZ1d\n+UbGxDlrtvIxq3jEhy+/305RkVY6CVZRkfLT52fFKCpjosuSh49ZzSM+PD9tNR3vmsDd/1vCvkOh\nR94tKlIeHL+cOWt2xjg6AzBjpd2Z6DZLHj5muSO+vDlnPT3u/YxFG3fzw75DJc+D5O49RNc/TeSl\nmWs8jjB5/fzFOWzPy/c6jIRifR4+ZjWP+HThv2Z6HYIJYemWPJo3rO11GAnDah4+ZsnDmKp7ZmoO\nk5dt8zqMhGHJw8csdxhTdd+s3cU1r2WTu/eQ16EkBEsePmbJw5jwnf7QZFZu2+t1GL5nycPHCi17\nGFMtw5/8itdnrQ17v++25rEtL5+d+w+7HpPfWIe5j1X2XIExJrQjhcqfPlzKlX0zq7T9hp0HGPH0\nzFJJI5rz2fuB1Tx8zB4SNCYyb8xZV6Xt/jt/o9U2yrDk4TOHC4rYuidwv7rdbWVMZO7+YAnb91b+\n/Eeo/2oXPDWjZHbMZGTJw2fufH8xfR7+gs27D7I9z+4aMSZSBw9XPjmZhJhefvGmPfS8//MoROQP\n1ufhM5OWbQXgzEemeByJMYnhSGFRpdukhsoeSc5qHj6ROWY8178+z+bwMMZlgx+fzp/+t6TCbSr6\nf/fGnHV8uGATO/YlV0uA1Tx84MY35wPw6dKtHkdiTGJ6ffY6Ji3bxn9vOJM2jeocs/7lCsYlu/uD\nQOJpVr8mj1/Wi/7HZ0QtznhiNY84kX8k0O66bsd+3pq7HoDznvyKC56awfhF7s2XbYwJbWtePj96\nZAqZY8Zz30dLS25MATjv5FaV7v/DvsNc9dLcpLmF3lc1DxEZBvwfkAq8oKqPeBxSxI4UFtHl7okA\nDOvesqR2seaH/SzdnOdlaMYkrVe+XssrX68ls2ld7ruwO1O/q/o88x3unMBPs9rx8z7HcVLb9ChG\n6S3xS5YUkVTge+DHwEbgG+ByVV0WavusrCzNzs6OYYThWbF1L9e+ls36nQe8DsUYE0XLHxhGnZqp\nXodRZSIyT1WzKtvOTzWP3kCOqq4GEJG3gRFAyORRXfsOFfDoxO9QFNVAR5lq4GnuwPvAzyJnmZJt\n1ClztnV+Tlhs/RTGJLMT//xpyPJze7Rk7Y4DrMrdx8WntmFkrzZs2n2Q6d/nssN5ILFGagr5Rwqp\nWzONzKZ1aZlem32HCigqCnzeFKpSpHr0fVHgfdvGdbiuf6eo/l5+Sh5tgA1B7zcCZwRvICLXAdcB\ntG/fvlonOVxQxCeLNiMiCIH7u0stI6Q4ZZSsh5SSbY5ua0+AG2PKM2PlD/Rok06HpvV4a+4G3pob\n+HhrVLcG7ZvUZVtePtvyDtGyYW32HypgRk4u+UeO3lacmhL4LEoRIUWE1BRBJFB+Upt0Sx7hUNWx\nwFgINFtV5xhN6tXk2z8PcTsu8o8UUbtGCnkHC5izZgfrdhzgoQnLXT2PMSZ+/fWikxjWoyVN6tVE\nVUu+gAJs2XOQycu3c0q7RnRr1ZCUlGOfKykqUjbvOUir9Dqkhlgfa35KHpuAdkHv2zplcU9ESto8\n0+vWYEj3lgBc278jeflHePGrNWzdk8+IXq254oU5XoZqjCmjU0Y9VuXuD3u/ivo6pMxDh63S63Bl\nn+MqPF5KitC2cd2w44gWPyWPb4AuItKBQNIYBVzhbUiRa1i7Brf++Phjyr8eM5AzH5nCDQM68cyX\nqzyIzJjkdXLbdO69oDsnt02nRmoKmWPGh7X/rDsH+qqTvDp8kzxUtUBEbgI+I3Cr7kuqutTjsFwX\nPMxz8fL32/YxeblNn2lMtF3QszUPXNidxvVqVmv/Pwztylmdm9Eq/dgHDRONb5IHgKpOACZ4HUes\nvTA6i/s/Xsr073P5/Naz6XTXBOrVTGV/FQZ0M8ZU7i8jutO7Q1O6tmxQ7WMk2/wevkoeyezeC7qX\nLK995Dx2HzhMrwcmeRiRMYlh5UPnUiM1ssE2endo4lI0/mHJw6ca1a1etdoYE9C3Y1N+M6BTxIkD\n4N1f93UhIn+x5GGMSUp3nHsCvdo1ivg4z195mgvR+I8lD2NM0plz1yBaNKwd8XFW/3V4yGcykoGN\nqmuMSRpZxzXm81v7h504XrgqK+RsgsmaOMCShzEmiZzYqiHHtwj/jqrB3VrQs23kTVyJxJKHMcZU\nwY+7tShZPrdHS765e7CH0XjP+jyMMUkjkqnIr+nXoeRnrbTEfnq8Kix5GBMFvzgzk6zMxkxato0P\nF2z2Ohzjglppqdx4Tmevw4gbljyMcdmTl5/ChT1bA3D+ya356entuOLfNuBlPBjRq7XXISQM6/Mw\nxkV/GdG9JHEUO7NTM5beP5Q7hp3gUVQGAiMznHZc8j0JHi2WPIxxyd3DT+Tn5QyrXa9WGr8Z0IkH\nR/aIcVTGRIc1WxkToRl3nFPleRbsdk+TKKzmYUwELjmtbVgT9JzUNp2v/nhOFCMyJjYseRgTgX9c\n2jPsfdo1qcs9550YhWiMiR1LHsZU0yc3n1Xtfa/p15HPbunvYjSmPO2b1GXNw8O9DiPhWJ+HMWG6\n/uxO3HhOJxrUrhHRcSKZeMiEp+yc4SZyVvMwJkxjzj0h4sRR7O3r+rhyHGNizZKHMR7q07EpNwzo\n5HUYCS0tiUe+jSZLHj7WuK47335N1Y2NwsQ/fxx2ArXS7L9i1FjuiAr7F+tj1o4be0O6t4zKcT+/\n1TrPo8X+l0SHJQ8fs/8UieO4pvXo3Ly+12EkpI4Zdl2jIWrJQ0TuE5FNIrLAeQ0PWneniOSIyAoR\nGRpUfpqILHbWPSnOV2sRqSUi7zjlc0QkM1pxG+MVVfU6hITz8i9P54mf9vI6jIQU7ZrHE6ray3lN\nABCRbsAooDswDHhGRIoHx38WuBbo4ryGOeVXA7tUtTPwBPBolOP2BfuoSSz1XbqDyxx1Ttfm1K9l\nTyREgxfNViOAt1X1kKquAXKA3iLSCmioqrM18BXsNWBk0D6vOsvjgEFiDf72TTXGZt05MKrHf+7n\np0b1+Ma4KdrJ42YRWSQiL4lIY6esDbAhaJuNTlkbZ7lseal9VLUA2AM0LXsyEblORLJFJDs3N9fd\n3yQOnXdyK69DSCqt0utE/fiX924X1XMY45aIkoeITBaRJSFeIwg0QXUEegFbgMdciLdCqjpWVbNU\nNSsjIyPap/PcfRd09zoEY0ySiqgxUFWrNAO8iPwb+MR5uwkI/nrV1inb5CyXLQ/eZ6OIpAHpwI7q\nR54Y0lLtZrlYsYEM/Wf+n37sdQgJLZp3WwW3qVwELHGWPwJGOXdQdSDQMT5XVbcAeSLSx+nPuAr4\nMGif0c7yJcAUtQZ/EyMf33QW1/TrGKOzJX1Xnit6tk2nSb2aXoeR0KJ5G8LfRKQXgZuC1gK/BlDV\npSLyLrAMKABuVNVCZ58bgFeAOsBE5wXwIvC6iOQAOwncrWVMTJzUNj1m5+rVLp235sbsdAnprWv7\ncGIrG3T5GAlpAAASUklEQVQy2qKWPFT1ygrWPQQ8FKI8Gzhmnk5VzQcudTXABCECVgdLHJdltWPX\ngSM8MvE7r0PxrdMzG1uTbgzYFfY5a+RILCJCZtN6XofhK/+5+oxS7+0u/tiwp2d8TqzqEVU3nmMj\n3nrhH5f2ZPeBwzw4fnml257VpRn3X9idHm0akl6nBqk2im5MWPLwuRSBwso3M9XQpXl9/jD0hJif\nd0DXDHq2a8TCDbtjfu54IcDVZ3XgrC7N6NK8Ade8+g1TV5R+duuGAZ24NCtw4+boMzNjH2SSs2Yr\nnxNruIqacb8505Pz1q6RGpWh3+NRvZqpIcuVQK36hJYNSU2RUrWJZvUDd1FdcUZ7OjSzJj6vWM3D\n59QHI1z58Vv0XcNPIL2Od2NNJUtL5Eu/OJ2szCZ8u34Xlzw3q6S8qMwF+P3QrmzcdZD3ru9L/Vpp\nHDhcSD0bs8pTdvV9rrAovj9lJt92Nu2b1OVIYREABYVKzwc+9ziqiqUIXNff+jpiQYHUFCErs8mx\nK4Kc0LIhn95ydM4TSxzes7+Az8Vz7ph3z2Ca1q8FQE0fzZQ39fcDvA6B2jX8c70iUV4Nq5PNbRL3\nkuNfaALrEqf/ybq1aliSOPzmuDi4VbZR3Zq8++u+XocRdaEGiph150BOO65xiK1NPLHk4XNvXdfH\n6xDC9nwcdwafH0cjFffu0KTyjXyuYZl+pQa10qI+erFxhzVb+Vyz+rWoUyOVg0fi64bdilrThnZv\nScPaaeTlF8Qsnqp66vJTvA4habz6q970aHN06JeF9w4hzZ7R8A1LHgnAHqh1jz2dHDtnH1962gQv\n724z4bNmqwQQjx93NuixMYnNkofxhH3DN8bfLHkkgHj8IP7NAP89J3Fuj5ZehxC2q8/q4HUIJklZ\n8jCuG9A1gxG92lS4zeOX9YxRNFX39BWneh3CMX5ySsXXMf6+NphkYckjAcTbB0hV4hl0YgtOjuEk\nS1WREod3+jz+016l3v/k1NLJxHqWjFcseSSC+PvMi2t3DIv9SLmR+HX/o1PgPn5ZL07PtAfojPcs\neZikMuiE5r7rj7lz+InlrrPvDcYrljwSQLx9gPRqV7Vvxl7E/S+nX+OFq7I8OLv7vGy2mvDbfh6e\n3XjNHhI0rjqhZQNuHtjZ6zBCat6gFnWc+SMGd2vhcTThufjUtiXPztgcLiYeWPJIAPF0q26XFg3i\nsuO5MvH+dPNj5dyd5vWVXvHgMLre86nHURgvRNRsJSKXishSESkSkawy6+4UkRwRWSEiQ4PKTxOR\nxc66J8X55BORWiLyjlM+R0Qyg/YZLSIrndfoSGJORCN6tfY6BF9rlV6bz2/tX/mGceqe88rvE4m2\nWmmhZwKsyO+HHM+XcTDsvYlMpH0eS4CfANODC0WkGzAK6A4MA54RkeJ/Zc8C1wJdnNcwp/xqYJeq\ndgaeAB51jtUEuBc4A+gN3CsidrtJkHsv6O51CL70f6N6MfF3/Zhxx0BaNKztdThVVjx7ZIdm9bh5\nYBeu6dexkj3cd/7JrTi+RWA6gIEnNA9r31OPa0ymTR/rexElD1VdrqorQqwaAbytqodUdQ2QA/QW\nkVZAQ1WdrYEG3NeAkUH7vOosjwMGObWSocAkVd2pqruASRxNOIbATGydMnz4nzEGzW0Xn9q23NON\n6NWGE1s1LDU/tp88evHJpNf1prntX1ecSlpq4OPjhauyeOiiHlXet0m9mtEKy8RQtO62agNsCHq/\n0Slr4yyXLS+1j6oWAHuAphUc6xgicp2IZItIdm5urgu/hn+8cY3/5vWIti9uP5u/jDxaK/vtoC4e\nRuOeU9oHKt5N68fHh3BKilQ6lHrN1BRuGdyF967vywktG8YoMhNNlXaYi8hkINSgP3er6ofuh1R9\nqjoWGAuQlZWVVA/ftkyvTdN6Ndmx/7CncVxyWtvKN3KM6NmahRt2RyWOn53Rnk4ZgWaVtY+cF5Vz\neOWPQ7ty0SltSn6/eFDZHWBvXnvGsfOUG1+rtOahqoNVtUeIV0WJYxPQLuh9W6dsk7NctrzUPiKS\nBqQDOyo4linjvev7etp5Our0dsfM0VCRX/4ok8EnRueW2d8lSC0jlLTUFE5s5a9v70n1TS5JRKvZ\n6iNglHMHVQcCHeNzVXULkCcifZz+jKuAD4P2Kb6T6hJgitMv8hkwREQaOx3lQ5wyU0bHjPqedJ5W\nl4hQM839/oabB3amuY86wJOBTe+SeCJ6zkNELgKeAjKA8SKyQFWHqupSEXkXWAYUADeqavE8qTcA\nrwB1gInOC+BF4HURyQF2ErhbC1XdKSJ/Ab5xtntAVXdGEreJjro17bGhpFXJdwCbHCzxRHq31Qeq\n2lZVa6lqC1UdGrTuIVXtpKpdVXViUHm20+zVSVVvcmoXqGq+ql6qqp1Vtbeqrg7a5yWnvLOqvhxJ\nzCZ6fj/0+LD3+eNQfw1S6Bev/ap3yPKRUXomqGZqxR8lljoSj41tlYBuGRz79v6fndG+WjWPzGb1\nuO3HgaTTt2NTt8MyZTSuV5OXf3k6tw4+nmuqMZFUh2b1mHvXoGPKzz+5Fb8d2JnHL+vJgK7H9nvV\nr2W10kRjySMB3TI4/BqAl87sFEgaZ3Vp5srxLstqV/lGSeycrs353eAu3HN+t7D3bdOoTsj+pLTU\nFG4b0pWfnNqWl39xOpNvO/rE/tgrT6NHm/iau8VEzpKHqZLRfY+rcP3vh3St9rGzMpuQ89C5XFTJ\nrHmVGda9JWseHk67JnUjOk6iCDVvSdmuh5/3ae/6eUWEzs0bMOG3/ZhxxzkM6e6/6X1N5Sx5mEp1\naFaPs4OaIj6+6SweHHn0ieIHRnSncYRPDaelptC6UR0m33Z2tY8x8pTWcTVIpJeUqs0j/+DIk2gf\npWTbrXVD2ja2RJ6oLHmYSqkqrdLrAHDr4OM5KWj62G6tGnJln4prJeFoXM3hNn7UuSlDutk33Ghq\n36Qufxha/RqmSSyWPEyVnNiqIZ/f2v+YuTp6tmvk6rf9GmnV+yd5/dmdfDkUfDy4tl/VOs6/uP1s\nerZrFOVojF9Y8jBVdnzQXB3Rah1qWLsGb157Rtj7Nagd3/NxxFqX5lUfuuTKvpnlXvOr+h7HTed0\nplZaCqnWJGiC2P1zplouOqUNs1fvLLnN1k1ndmrGa7/qzVUvza102+x7BpO9die97BtxieqM5dW4\n7rF9VjPHDKR1em1EhN9bc5Upw2oeBoC/jAhvTpC6NdN46vJTyGhQKyrx9K/CGFkf3fQjmtWvxbAe\nraISQzI5sVXDUrWPkb1alyQOY0Kx5GGAQNNFvJl797EPowU7ua3VNop9cvNZFa4vnrOkaQV3xZ3Z\nqRkdM+oxoGsG/xx1iiUOUyFrtjJxq3mD2sy7ZzA101I46b7PvQ4nrvVok87E3/Vj7prQw76tfPBc\nxs3fWOmzNFNuHxCF6EwisuRhSnw9ZiBnPjLF6zBKaVq/dLPYhzf+iCb1anKooMijiOLXia0aljtU\ne0qK2JP3xlWWPBLUe9f35dLnZoW1T+tGdaIUTeRu//Hx7Nh/2G4VDdPNAzuzLS/f6zBMArLkkaBO\nz2xCn45NmL06vNHr1z5yHqpKhzsnRCmy6rk5gSd3iqbbIxg2xpiKWId5Anu1nGG5qyKz6dFhJe45\nL/wB9Iwxic2SRwKrlZZarf1EhE9+2w8IPM8xuFt0poo1xviXJY8EFzw0dnmevPyUY8rq10pj+h/O\n4ZGLT4pGWMYYn7M+jwTXuXmDSre5sGfo2eXaN7URUY0xoVnNIwlM/F0/r0MwxiQYSx5JoOy9/ye0\nrLw2YowxFbHkkST+dvHJNG9Qi7uGn8Cnt1TeD2KMMRWxPo8kcdnp7bjsdHvC2BjjjohqHiJyqYgs\nFZEiEckKKs8UkYMissB5PRe07jQRWSwiOSLypDijr4lILRF5xymfIyKZQfuMFpGVzmt0JDGbgNuj\nMJS6MSZ5RNpstQT4CTA9xLpVqtrLeV0fVP4scC3QxXkNc8qvBnapamfgCeBRABFpAtwLnAH0Bu4V\nkcYRxp307IltY0wkImq2UtXlQJWHbhaRVkBDVZ3tvH8NGAlMBEYA9zmbjgP+5dRKhgKTVHWns88k\nAgnnrUhiN/DMz06lTs3qPUhojElu0ezz6CAiC4A9wD2q+hXQBtgYtM1Gpwzn5wYAVS0QkT1A0+Dy\nEPuUIiLXAdcBtG/f3r3fJEENP8kmUTLGVE+lyUNEJgMtQ6y6W1U/LGe3LUB7Vd0hIqcB/xOR8Kaq\nqwZVHQuMBcjKytJon88YY5JVpclDVQeHe1BVPQQccpbnicgq4HhgE9A2aNO2ThnOz3bARhFJA9KB\nHU75gDL7fBluTMYYY9wTlec8RCRDRFKd5Y4EOsZXq+oWIE9E+jj9GVcBxbWXj4DiO6kuAaaoqgKf\nAUNEpLHTUT7EKTPGGOORiPo8ROQi4CkgAxgvIgtUdSjQH3hARI4ARcD1xR3ewA3AK0AdAh3lE53y\nF4HXRSQH2AmMAlDVnSLyF+AbZ7sHgo5ljDHGAxL4cp94srKyNDs72+swjDHGV0RknqpmVbadDU9i\njDEmbJY8jDHGhM2ShzHGmLAlbJ+HiOQC6yI4RDPgB5fCiRaL0T1+iNNidIcfYgTv4jxOVTMq2yhh\nk0ekRCS7Kp1GXrIY3eOHOC1Gd/ghRoj/OK3ZyhhjTNgseRhjjAmbJY/yjfU6gCqwGN3jhzgtRnf4\nIUaI8zitz8MYY0zYrOZhjDEmbJY8jDHGhM2SRxkiMkxEVjhzqY+J8bnbichUEVnmzA3/O6f8PhHZ\nFDQn/PCgfe50Yl0hIkODykPOFe9SnGudYy8QkWynrImITHLmmZ8UPFWwRzF2DbpeC0QkT0Ru8fpa\nishLIrJdRJYElbl27USkloi845TPEZFMl2L8u4h8JyKLROQDEWnklGeKyMGg6/lcLGKsIE7X/r5R\nvJbvBMW3VgKT5nl6LatFVe3lvIBUYBXQEagJLAS6xfD8rYBTneUGwPdANwLT8/4+xPbdnBhrAR2c\n2FOddXOBPoAQGLn4XBfjXAs0K1P2N2CMszwGeNTLGEP8XbcCx3l9LQmMOH0qsCQa147AqNXPOcuj\ngHdcinEIkOYsPxoUY2bwdmWOE7UYK4jTtb9vtK5lmfWPAX/2+lpW52U1j9J6AzmqulpVDwNvE5hb\nPSZUdYuqzneW9wLLKWfKXccI4G1VPaSqa4AcoLcEzRWvgX9VxXPFR9MI4FVn+dWg88VDjIOAVapa\n0YgDMYlTVacTmHKg7LndunbBxxoHDAq3phQqRlX9XFULnLezKT2p2zGiHWN5cVYgbq5lMedYlwFv\nVXSMWFzL6rDkUVqV50uPNqf6eQowxym62WkyeCmoWaO8eCuaK94NCkwWkXkSmDceoIUGJvuCwLf8\nFh7HGGwUpf+DxtO1BHevXck+zof9HqCpy/H+iqPz8AB0cJpZpolIv6A4vIrRrb9vtOPsB2xT1ZVB\nZfF2LctlySMOiUh94L/ALaqaBzxLoCmtF4H54R/zMDyAs1S1F3AucKOI9A9e6Xw7iot7wEWkJnAh\n8J5TFG/XspR4unahiMjdQAHwhlO0BWjv/Hu4DXhTRBp6FR9x/vct43JKf6mJt2tZIUsepRXPo14s\neI71mBCRGgQSxxuq+j6Aqm5T1UJVLQL+TaB5raJ4K5orPmKqusn5uR34wIlnm1O9Lq5mb/cyxiDn\nAvNVdZsTc1xdS4eb165kHxFJA9KBHW4EKSK/AM4HfuYkOZxmoB3O8jwCfQnHexWjy3/faF7LNOAn\nwDtBscfVtayMJY/SvgG6iEgH5xvrKAJzq8eE01b5IrBcVR8PKm8VtNlFQPGdGx8Bo5w7LjoQmCt+\nrlY8V3ykMdYTkQbFywQ6UpdQeg760ZSemz6mMZZR6ttdPF3LIG5eu+BjXQJMKf6gj4SIDAP+CFyo\nqgeCyjNEJNVZ7ujEuNqLGJ0Y3Pz7Ri1OYDDwnaqWNEfF27WsVKx65v3yAoYTuMtpFXB3jM99FoEm\ni0XAAuc1HHgdWOyUfwS0CtrnbifWFQTdBQRkEfiPswr4F85oAi7E2JHAXSsLgaXF14hAO+sXwEpg\nMtDEqxiDjl+PwLew9KAyT68lgUS2BThCoO36ajevHVCbQBNdDoE7dDq6FGMOgbb14n+XxXf4XOz8\nO1gAzAcuiEWMFcTp2t83WtfSKX8FuL7Mtp5dy+q8bHgSY4wxYbNmK2OMMWGz5GGMMSZsljyMMcaE\nzZKHMcaYsFnyMMYYEzZLHsYYY8JmycMYY0zY/h8djqO9KRMtfAAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f2f77978b00>"
+       "<matplotlib.figure.Figure at 0x7f29533c9e80>"
       ]
      },
      "metadata": {},
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -176,7 +176,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +233,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
