--- a/deep_learning/Basics/Tensorflow_dropout.ipynb
+++ b/deep_learning/Basics/Tensorflow_dropout.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -23,14 +23,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from sklearn.utils import shuffle\n",
     "import sklearn as sk\n",
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -46,12 +46,16 @@
     "    std = X.std(axis=0)\n",
     "    np.place(std, std==0, 1)\n",
     "    X = (X-mu)/std\n",
-    "    return X, Y"
+    "    return X, Y\n",
+    "\n",
+    "\n",
+    "def error_rate(p, t):\n",
+    "    return np.mean(p != t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -78,6 +82,138 @@
     "            b = tf.zeros(size[1])\n",
     "            b = tf.cast(b, tf.float32)\n",
     "            return W, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class ANN(object):\n",
+    "    def __init__(self, hidden_layer_sizes, p_keep):\n",
+    "        self.hidden_layer_sizes = hidden_layer_sizes\n",
+    "        self.dropout_rates = p_keep\n",
+    "\n",
+    "    def fit(self, X, Y, lr=1e-4, mu=0.9, decay=0.9, epochs=10, batch_sz=100, split=True, print_every=2):\n",
+    "        # make a validation set\n",
+    "        X, Y = shuffle(X, Y)\n",
+    "        X = X.astype(np.float32)\n",
+    "        Y = Y.astype(np.int64)\n",
+    "        if split:\n",
+    "            Xvalid, Yvalid = X[-1000:], Y[-1000:]\n",
+    "            X, Y = X[:-1000], Y[:-1000]\n",
+    "        else:\n",
+    "            Xvalid, Yvalid = X, Y\n",
+    "\n",
+    "        # initialize hidden layers\n",
+    "        N, D = X.shape\n",
+    "        K = len(set(Y))\n",
+    "        self.hidden_layers = []\n",
+    "        M1 = D\n",
+    "        for M2 in self.hidden_layer_sizes:\n",
+    "            h = HiddenLayer(M1, M2)\n",
+    "            self.hidden_layers.append(h)\n",
+    "            M1 = M2\n",
+    "        W = np.random.randn(M1, K) / np.sqrt(M1)\n",
+    "        b = np.zeros(K)\n",
+    "        self.W = tf.Variable(W.astype(np.float32))\n",
+    "        self.b = tf.Variable(b.astype(np.float32))\n",
+    "\n",
+    "        # collect params for later use\n",
+    "        self.params = [self.W, self.b]\n",
+    "        for h in self.hidden_layers:\n",
+    "            self.params += h.params\n",
+    "\n",
+    "        # set up theano functions and variables\n",
+    "        inputs = tf.placeholder(tf.float32, shape=(None, D), name='inputs')\n",
+    "        labels = tf.placeholder(tf.int64, shape=(None,), name='labels')\n",
+    "        logits = self.forward(inputs)\n",
+    "\n",
+    "        cost = tf.reduce_mean(\n",
+    "            tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
+    "                logits=logits,\n",
+    "                labels=labels\n",
+    "            )\n",
+    "        )\n",
+    "        train_op = tf.train.RMSPropOptimizer(lr, decay=decay, momentum=mu).minimize(cost)\n",
+    "        # train_op = tf.train.MomentumOptimizer(lr, momentum=mu).minimize(cost)\n",
+    "        prediction = self.predict(inputs)\n",
+    "\n",
+    "        n_batches = N // batch_sz\n",
+    "        costs = []\n",
+    "        init = tf.global_variables_initializer()\n",
+    "        with tf.Session() as session:\n",
+    "            session.run(init)\n",
+    "            for i in range(epochs):\n",
+    "                X, Y = shuffle(X, Y)\n",
+    "                for j in range(n_batches):\n",
+    "                    Xbatch = X[j*batch_sz:(j*batch_sz+batch_sz)]\n",
+    "                    Ybatch = Y[j*batch_sz:(j*batch_sz+batch_sz)]\n",
+    "\n",
+    "                    session.run(train_op, feed_dict={inputs: Xbatch, labels: Ybatch})\n",
+    "\n",
+    "                    if i%print_every==0 and j==0:\n",
+    "                        c = session.run(cost, feed_dict={inputs: Xvalid, labels: Yvalid})\n",
+    "                        p = session.run(prediction, feed_dict={inputs: Xvalid})\n",
+    "                        costs.append(c)\n",
+    "                        e = error_rate(Yvalid, p)\n",
+    "                        print(\"i:\", i, \"j:\", j, \"nb:\", n_batches, \"cost:\", c, \"error rate:\", e)  \n",
+    "        \n",
+    "        plt.plot(costs)\n",
+    "        plt.show()\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        # no need to define different functions for train and predict\n",
+    "        # tf.nn.dropout takes care of the differences for us\n",
+    "        Z = X\n",
+    "        Z = tf.nn.dropout(Z, self.dropout_rates[0])\n",
+    "        for h, p in zip(self.hidden_layers, self.dropout_rates[1:]):\n",
+    "            Z = h.forward(Z)\n",
+    "            Z = tf.nn.dropout(Z, p)\n",
+    "        return tf.matmul(Z, self.W) + self.b\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        pY = self.forward(X)\n",
+    "        return tf.argmax(pY, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i: 0 j: 0 nb: 410 cost: 3.78448 error rate: 0.894\n",
+      "i: 2 j: 0 nb: 410 cost: 0.364539 error rate: 0.098\n",
+      "i: 4 j: 0 nb: 410 cost: 0.332197 error rate: 0.081\n",
+      "i: 6 j: 0 nb: 410 cost: 0.363836 error rate: 0.068\n",
+      "i: 8 j: 0 nb: 410 cost: 0.381738 error rate: 0.08\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAD8CAYAAACMwORRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHAhJREFUeJzt3WtwXPWZJvDn6YsuvskXtW1ZaiEcDME2vnY7zpBhCBDG\nwGIC2JZSu8kwNSkXG1IkNbO1lewHZsO3ra3KbhG2kiIJNWQ3E0uYyxpiloQBhjBJjNvGMjY2RIZg\nyTfJsi3fLUv97oc+slvtltWyuvucPv38qrp8Lv/ufutAP+fonNP90swgIiL+EnC7ABERyT+Fu4iI\nDyncRUR8SOEuIuJDCncRER9SuIuI+JDCXUTEhxTuIiI+pHAXEfGhkFtvXFtba01NTW69vYhISdq2\nbdtRM4uMNs61cG9qakIikXDr7UVEShLJz3IZp9MyIiI+pHAXEfEhhbuIiA8p3EVEfEjhLiLiQwp3\nEREfUriLiPhQyYV7R/dpPPnKh+gfSLpdioiIZ5VcuHceO4tn/+1TvLn3iNuliIh4VsmF+203RjB7\nShVat3a6XYqIiGeVXLgHA8TaWAP+9eMeHOo753Y5IiKeVHLhDgDrYlEkDdiY6HK7FBERTyrJcI9O\nn4Bbb5iB1kQnkklzuxwREc8pyXAHgOZ4I7qOn8MfPul1uxQREc8p2XC/e/4s1FSHsUEXVkVErlCy\n4V4VDuLBpfV4fddhHD/T73Y5IiKeUrLhDgDN8Sj6B5N4eccBt0sREfGUkg73m+umYFFDDVq3dsJM\nF1ZFRIaUdLgDqaP3vYdPYWdXn9uliIh4RsmH+/2L56AqHEBrQhdWRUSGlHy4T6kK475b5mDTjoM4\n2z/gdjkiIp4wariTrCL5Hsl2krtJ/iDLmEdI9pDc4Ty+WZhys2uOR3H6wgA2f3C4mG8rIuJZuRy5\nXwBwh5ktBrAEwCqSK7OMazWzJc7jZ3mtchTxpmmYWzsRbbrnXUQEQA7hbimnndmw8/DUrSkksS4e\nxXt/PoZ9PadHf4KIiM/ldM6dZJDkDgDdAH5rZluyDHuY5E6SG0lG81plDh5aVo9QgGjThVURkdzC\n3cwGzWwJgAYAK0guzBjyCoAmM1sE4A0Az2V7HZLrSSZIJnp6esZT9xVmTq7CHZ+fiRe2deHioLo0\niUh5G9PdMmZ2AsDbAFZlLO81swvO7E8BLB/h+c+YWczMYpFI5BrKvbqWFVEcPd2PN/d25/21RURK\nSS53y0RITnWmqwHcBWBvxpi6tNnVAPbks8hc3TYvgllTKtWlSUTKXi5H7nUA3iK5E8BWpM65v0ry\nSZKrnTGPO7dJtgN4HMAjhSn36kLBANYuj+Ltj7pxuO+8GyWIiHgC3fpNllgsZolEIu+vu7/3LG77\n72/hP919I759x7y8v76IiJtIbjOz2GjjSv4bqpkaZ0zAX3xuBtoSXerSJCJly3fhDqS+sbr/2Fn8\nUV2aRKRM+TLc/3rBbNRUh/VjYiJStnwZ7lXhIL66ZA5e23UYfWcvul2OiEjR+TLcAWBdPIr+AXVp\nEpHy5NtwXzCnBrfU12CDujSJSBnybbgDqaP3PYdOYteBk26XIiJSVL4O99VOl6YNW/e7XYqISFH5\nOtxrqsO4d2EdNu04iHP9g26XIyJSNL4OdyB1z/upCwPY/MEht0sRESka34f7iuun4/raibrnXUTK\niu/DnSTWxaJ479Nj+ERdmkSkTPg+3AHg4eX1CAaItkSX26WIiBRFWYT7pS5N29WlSUTKQ1mEOwA0\nx6LoOXUBb6lLk4iUgbIJ99tvimDm5Eo10BaRslA24R4KBrBmeQPe3NuNIyfVpUlE/K1swh0A1sWi\nSBqwcZsurIqIv5VVuDfVTsTKudPRluhUlyYR8bWyCncAaIk34rPes9jy6TG3SxERKZhRw51kFcn3\nSLaT3E3yB1nGVJJsJdlBcgvJpkIUmw+rFs7G5KoQWvVjYiLiY7kcuV8AcIeZLQawBMAqkiszxvwd\ngONmdgOA/wHgv+W3zPxJdWmqV5cmEfG1UcPdUoa+tx92HpknrB8A8JwzvRHAnSSZtyrzrDkexYWB\nJP5vu7o0iYg/5XTOnWSQ5A4A3QB+a2ZbMobUA+gEADMbANAHYEaW11lPMkEy0dPTM77Kx2FhfQ0W\nzJmC1q26511E/CmncDezQTNbAqABwAqSCzOGZDtKv+J2FDN7xsxiZhaLRCJjrzaPWuJR7D54ErsO\n9Llah4hIIYzpbhkzOwHgbQCrMlZ1AYgCAMkQgBoAnr4dZfWSelSGAjp6FxFfyuVumQjJqc50NYC7\nAOzNGLYJwN8402sAvGke70pdUx3GvbfU4eUdB3D+oro0iYi/5HLkXgfgLZI7AWxF6pz7qySfJLna\nGfNzADNIdgD4ewDfK0y5+bUuFsWp8wN4bZe6NImIv4RGG2BmOwEszbL8ibTp8wDW5re0wls5dzqa\nZkzAhvc68eDSBrfLERHJm7L7hmo6klgbi2LLp8fw6dEzbpcjIpI3ZR3uALBmeYPTpUkXVkXEP8o+\n3GdNqcKXb4pg47YuDKhLk4j4RNmHOwA0xxtTXZo+cu+LVSIi+aRwB/DlmyKITK7UPe8i4hsKd1zu\n0vTWR93oVpcmEfEBhbtjXSyKwaRh43Z1aRKR0qdwd1xfOxFfuH462rZ2wuNfrhURGZXCPU1zPIo/\nq0uTiPiAwj3NPQvrMLkyhDZdWBWREqdwT1NdEcQDS+fg1x8cQt85dWkSkdKlcM/QHGvEhYEkNrUf\ndLsUEZFrpnDPsLB+CubXTVEDbREpaQr3DCTRHI9i1wF1aRKR0qVwz+KrS+pREQrox8REpGQp3LOo\nmRDGPQtn4+X31aVJREqTwn0EzfEoTp4fwP/bddjtUkRExkzhPoKV189A4/QJ+jExESlJCvcRBAKp\nC6t/+KQXn/WqS5OIlJZRw51klORbJPeQ3E3yO1nG3E6yj+QO5/FEttcqNQ8va0CA0IVVESk5uRy5\nDwD4BzO7GcBKAI+RnJ9l3O/MbInzeDKvVbpkdk0VvnzTTDyfUJcmESkto4a7mR0ys+3O9CkAewDU\nF7owr1gXj6L71AX868fq0iQipWNM59xJNgFYCmBLltVfJNlO8jWSC/JQmyfc8fmZqJ1UiQ26sCoi\nJSTncCc5CcALAL5rZiczVm8HcJ2ZLQbwIwAvj/Aa60kmSCZ6ekrjSDgcDODh5fV4c283uk+pS5OI\nlIacwp1kGKlg/6WZvZi53sxOmtlpZ3ozgDDJ2izjnjGzmJnFIpHIOEsvnmanS9ML2w64XYqISE5y\nuVuGAH4OYI+Z/XCEMbOdcSC5wnnd3nwW6qa5kUlY0TQdbQl1aRKR0pDLkfutAL4O4I60Wx3vJfko\nyUedMWsA7CLZDuApAC3msxRsjkfx6dEzeE9dmkSkBIRGG2Bm7wLgKGOeBvB0voryontvqcN/3bQb\nrYlOfGHuDLfLERG5Kn1DNUfVFUHcv2QONn9wCCfPq0uTiHibwn0MWuJRnL+YxKYd6tIkIt6mcB+D\nW+pr8PnZk/VzBCLieQr3MSCJlngUO7v68OHBzFv9RUS8Q+E+Rl9dqi5NIuJ9CvcxmjqhAqsWzMZL\n6tIkIh6mcL8GzfEo+s5dxOu71aVJRLxJ4X4Nvjh3BqLTq9WlSUQ8S+F+DQIBYt3yKH6/rxf7e8+6\nXY6IyBUU7tdoTUxdmkTEuxTu16iuphp/dWMEG7epS5OIeI/CfRya4404fPI83vlTafw2vYiUD4X7\nONx580zUTqrQhVUR8RyF+ziEgwE8vKwB/7KnGz2nLrhdjojIJQr3cVobi2IgaXhxe5fbpYiIXKJw\nH6cbZk5CvGkaWreqS5OIeIfCPQ/WxaL45OgZJD477nYpIiIAFO55cd+iOkyqDGHDe7qwKiLeoHDP\ngwkVIdy/WF2aRMQ7FO550hyP4tzFQbzSri5NIuK+UcOdZJTkWyT3kNxN8jtZxpDkUyQ7SO4kuaww\n5XrX4ganS5PueRcRD8jlyH0AwD+Y2c0AVgJ4jOT8jDH3AJjnPNYD+HFeqywBJLEuFkV7Vx/2HFKX\nJhFx16jhbmaHzGy7M30KwB4A9RnDHgDwC0v5I4CpJOvyXq3HPbi0HhXBgL6xKiKuG9M5d5JNAJYC\n2JKxqh5AeqJ14codAEiuJ5kgmejp8d/vsUybWIG7F8zCyzvUpUlE3JVzuJOcBOAFAN81s8zzDszy\nlCu+0WNmz5hZzMxikUhkbJWWiJZ4I06cvYjffHjE7VJEpIzlFO4kw0gF+y/N7MUsQ7oARNPmGwCU\n5W0jf/G5GWiYVq0LqyLiqlzuliGAnwPYY2Y/HGHYJgDfcO6aWQmgz8wO5bHOkhEIpC6svttxFJ3H\n1KVJRNyRy5H7rQC+DuAOkjucx70kHyX5qDNmM4BPAHQA+CmAbxWm3NKwZnkDSOB5dWkSEZeERhtg\nZu8i+zn19DEG4LF8FVXq5kxNdWl6flsXvnPXjQgGrrr5RETyTt9QLZDmWBSH+tSlSUTcoXAvkDtv\nnoUZEyvQqh8TExEXKNwLpCIUwEPL6vHGniM4elpdmkSkuBTuBdQcV5cmEXGHwr2Abpg5GcuvU5cm\nESk+hXuBNcei2NdzBtvUpUlEikjhXmD3LarDxIqgfkxMRIpK4V5gEytTXZpe3XkIp9SlSUSKROFe\nBENdml7dWZa/yCAiLlC4F8GS6FTcOGsSNujUjIgUicK9CEiiOd6I9s4T2HtYXZpEpPAU7kXy4NJ6\nhIPUhVURKQqFe5FMn1iBuxfMxkvvH8CFAXVpEpHCUrgXUXMsmurStFtdmkSksBTuRfSlG2pRP7Ua\nbfqddxEpMIV7EQUCxNpYg7o0iUjBKdyLbG0s1Wr2+W36MTERKRyFe5HVT63GX86LYGOiE4NJ/ZiY\niBSGwt0FLfEoDvadx+/UpUlECmTUcCf5LMlukrtGWH87yb605tlP5L9Mf7nr5lmYPrFCF1ZFpGBy\nOXL/JwCrRhnzOzNb4jyeHH9Z/lYRCuChpfX47YdH0KsuTSJSAKOGu5m9A+BYEWopK83xKC4OGl56\n/4DbpYiID+XrnPsXSbaTfI3kgjy9pq/NmzUZSxunYoO6NIlIAeQj3LcDuM7MFgP4EYCXRxpIcj3J\nBMlET48uJrbEo+joPo3t+0+4XYqI+My4w93MTprZaWd6M4AwydoRxj5jZjEzi0UikfG+dcm7b9Ec\nTKgIonXrfrdLERGfGXe4k5xNks70Cuc1e8f7uuVgUmUI9y9KdWk6fWHA7XJExEdyuRXyVwD+AOAm\nkl0k/47koyQfdYasAbCLZDuApwC0mE4i52xdPIqz/YN4tf2g26WIiI+ERhtgZl8bZf3TAJ7OW0Vl\nZlnjVMybOQmtiU60rGh0uxwR8Ql9Q9VlqS5NUby//wQ+PnLK7XJExCcU7h6gLk0ikm8Kdw+YMakS\nX5k/Cy9u71KXJhHJC4W7RzTHG3H87EW88WG326WIiA8o3D3iSzfUYk5NFTbonncRyQOFu0cEA8Ta\nWBTvdhxF13F1aRKR8VG4e8jaWAMA4PmEujSJyPgo3D2kYdoEfOmGWmzc1qUuTSIyLgp3j2mOR3Hg\nxDm823HU7VJEpIQp3D3mK/NnYdqEMNp0z7uIjIPC3WMqQ0E8uLQBv/nwMI6d6Xe7HBEpUQp3Dxrq\n0vTidl1YFZFro3D3oJtmT8aS6FS0JdSlSUSujcLdo5rjUXx85DTe71SXJhEZO4W7R92/ONWlSRdW\nReRaKNw9alJlCPfdUodX2g/ijLo0icgYKdw9rGVFFGf6B/HrnYfcLkVESozC3cOWNU7D5yIT9WNi\nIjJmCncPI4mWeCO27z+BP6lLk4iMgcLd4x5cVo9QQF2aRGRsRg13ks+S7Ca5a4T1JPkUyQ6SO0ku\ny3+Z5at2qEvT+wfQP5B0uxwRKRG5HLn/E4BVV1l/D4B5zmM9gB+PvyxJty4exbEz/XhjzxG3SxGR\nEjFquJvZOwCOXWXIAwB+YSl/BDCVZF2+ChTgtnkR1NVU6dSMiOQsH+fc6wGkp06Xs0zyJBgg1i5v\nwDt/6sGBE+fcLkdESkA+wp1ZlmX9QRSS60kmSCZ6enry8NblY20sCgDYqC5NIpKDfIR7F4Bo2nwD\ngIPZBprZM2YWM7NYJBLJw1uXj+j0Cbj1c7VoS3QiqS5NIjKKfIT7JgDfcO6aWQmgz8z0lcoCGOrS\n9G/71KVJRK4uNNoAkr8CcDuAWpJdAP4RQBgAzOwnADYDuBdAB4CzAP62UMWWu7sXzMLUCWFs2NqJ\nv5ynv3xEZGSjhruZfW2U9QbgsbxVJCOqDAXx1SX1+Oct+3HsTD+mT6xwuyQR8Sh9Q7XENMej6B9M\n4qX3D7hdioh4mMK9xNxcNwWLG2rQtlVdmkRkZAr3EtQcb8RHR06hvavP7VJExKMU7iXo/sV1qA4H\n0aqfAhaRESjcS9DkqjDuW1SHTTvUpUlEslO4l6jmuNOl6QN9pUBErqRwL1Gx66ZhbmSiGmiLSFYK\n9xJFEs2xKBKfHUdHt7o0ichwCvcS9tCyBoQCRJt+TExEMijcS1hkciXuvHkmXtjWpS5NIjKMwr3E\ntcQb0XumH2/uVZcmEblM4V7ibrsxgtlTqrBBF1ZFJI3CvcQFA8TaWAPe+bgHB9WlSUQcCncfWLs8\niqQBG7fpwqqIpCjcfaBxxgTcesMMdWkSkUsU7j6xLhZF1/Fz+P2+XrdLEREPULj7xF8vmI2a6jBa\nE7qwKiIKd9+oCgfx4NJ6vL7rMI6f6Xe7HBFxmcLdR9bFUl2aXt6hLk0i5U7h7iPz50zBooYatKpL\nk0jZyyncSa4i+RHJDpLfy7L+EZI9JHc4j2/mv1TJxbpYFHsPn8JOdWkSKWujhjvJIID/BeAeAPMB\nfI3k/CxDW81sifP4WZ7rlBytXjIHVeGAvrEqUuZyOXJfAaDDzD4xs34AGwA8UNiy5FpNqQrj3lvq\n8Er7QZztV5cmkXKVS7jXA0g/DOxylmV6mOROkhtJRrO9EMn1JBMkEz09PddQruSiJd6I0xcG8Oud\n6tIkUq5yCXdmWZZ5te4VAE1mtgjAGwCey/ZCZvaMmcXMLBaJRMZWqeQs3jQNc2snok33vIuUrVzC\nvQtA+pF4A4CD6QPMrNfMLjizPwWwPD/lybUgiXXxKLb++Tj29Zx2uxwRcUEu4b4VwDyS15OsANAC\nYFP6AJJ1abOrAezJX4lyLR5aVo9ggOqxKlKmRg13MxsA8G0AryMV2m1mtpvkkyRXO8MeJ7mbZDuA\nxwE8UqiCJTczJ1fhzs/PxAvbu3BxUF2aRMpNKJdBZrYZwOaMZU+kTX8fwPfzW5qMV3M8it98eAT/\nsqcbqxbOdrscESminMJdStNf3RjBrCmVaEt0KtzFF5JJw0DSkLTUv4Npj6FlQ2MGMx820rIkBpO4\n/G+2ZckkBjPeO5m0y+sy3ju9zsEsy74yfxYeXNpQ0G2lcPexUDCANcsb8OO39+GxX25HRSiAcJAI\nBwMIBwOoCAVQ4UyHQ0SFs2xofThIVA6bT3tOKPU6w59zeVkgkO0mKykWM8PFQcPFwSQuDibRP5hM\nzQ+kpvsHks46u7x+IGM+Y9zlaWf+0nOSuJgRbOlBmhlsA4OXQ28oYIeWZQZkZmh6VShABAJEKEAE\neXn60r8kQsHUumCAWNY4rfA1FfwdxFX//gvX4ff7evHRkVOpD+GwD3fqg1yID00owEuBXxEKoiJI\nhEOZO4lsOxpemr/8L6/cGaWtqxg2H0BFKOM10nZW6cuuZQd0tdAcmu/PDMksoTn032HU0Bw0XBi2\nPon+tPdLf07m6xRC+sFBajsSoWBgWHAFswRbZTiAaqatc8IuwOFjh56fLSBTrx9AMIBL/w49P/W8\n4euCgYDznGzLhj+GarpiWXq9znwwyzIvUrj73Jyp1XjpW7dedcxg0oYHxUAS2Y7e+gds+Hz6kV/6\nsgFD/+Dg8NcaGDmIzvQPDg+mIu2AggFe2qGk70xCATrbxLKGcSFkC81hO8O0GidUDN+JDXvOCDvG\nSzu50PD5K/7qSpu//Ffd5R0v6c0gkysp3MU5UgmiKhx0u5QRJZNpQZu2Q7kcvqkdytAOaPj6se+A\nQsNCkcNCLpfQzPZXR7bQHJpXaEq+KdylJAQCRJXHd0AiXqLfcxcR8SGFu4iIDyncRUR8SOEuIuJD\nCncRER9SuIuI+JDCXUTEhxTuIiI+RDN3foyHZA+Az67x6bUAjuaxnHzxal2Ad2tTXWOjusbGj3Vd\nZ2aj9il1LdzHg2TCzGJu15HJq3UB3q1NdY2N6hqbcq5Lp2VERHxI4S4i4kOlGu7PuF3ACLxaF+Dd\n2lTX2KiusSnbukrynLuIiFxdqR65i4jIVXg63EmuIvkRyQ6S38uyvpJkq7N+C8kmj9T1CMkekjuc\nxzeLVNezJLtJ7hphPUk+5dS9k+Qyj9R1O8m+tO31RBFqipJ8i+QekrtJfifLmKJvrxzrKvr2ct63\niuR7JNud2n6QZUzRP5M51uXWZzJI8n2Sr2ZZV9htZWaefAAIAtgHYC6ACgDtAOZnjPkWgJ840y0A\nWj1S1yMAnnZhm90GYBmAXSOsvxfAawAIYCWALR6p63YArxZ5W9UBWOZMTwbwcZb/jkXfXjnWVfTt\n5bwvAUxypsMAtgBYmTHGjc9kLnW59Zn8ewD/nO2/V6G3lZeP3FcA6DCzT8ysH8AGAA9kjHkAwHPO\n9EYAd7Lw/cpyqcsVZvYOgGNXGfIAgF9Yyh8BTCVZ54G6is7MDpnZdmf6FIA9AOozhhV9e+VYlyuc\n7XDamQ07j8yLdkX/TOZYV9GRbABwH4CfjTCkoNvKy+FeD6Azbb4LV/5PfmmMmQ0A6AMwwwN1AcDD\nzp/yG0lGC1xTrnKt3Q1fdP6sfo3kgmK+sfPn8FKkjvjSubq9rlIX4NL2ck4z7ADQDeC3ZjbiNivi\nZzKXuoDifyb/J4D/DCA5wvqCbisvh3u2PVjm3jiXMfmWy3u+AqDJzBYBeAOX985uc2N75WI7Ul+p\nXgzgRwBeLtYbk5wE4AUA3zWzk5mrszylKNtrlLpc215mNmhmSwA0AFhBcmHGEFe2WQ51FfUzSfLf\nAeg2s21XG5ZlWd62lZfDvQtA+t61AcDBkcaQDAGoQeH//B+1LjPrNbMLzuxPASwvcE25ymWbFp2Z\nnRz6s9rMNgMIk6wt9PuSDCMVoL80sxezDHFle41Wl1vbK6OGEwDeBrAqY5Ubn8lR63LhM3krgNUk\n/4zUqds7SP6fjDEF3VZeDvetAOaRvJ5kBVIXHDZljNkE4G+c6TUA3jTn6oSbdWWcl12N1HlTL9gE\n4BvOXSArAfSZ2SG3iyI5e+hcI8kVSP1/2Vvg9ySAnwPYY2Y/HGFY0bdXLnW5sb2c94qQnOpMVwO4\nC8DejGFF/0zmUlexP5Nm9n0zazCzJqQy4k0z+w8Zwwq6rUL5eqF8M7MBkt8G8DpSd6g8a2a7ST4J\nIGFmm5D6EPxvkh1I7fFaPFLX4yRXAxhw6nqk0HUBAMlfIXUnRS3JLgD/iNTFJZjZTwBsRuoOkA4A\nZwH8rUfqWgPgP5IcAHAOQEsRdtK3Avg6gA+cc7UA8F8ANKbV5cb2yqUuN7YXkLqT5zmSQaR2KG1m\n9qrbn8kc63LlM5mpmNtK31AVEfEhL5+WERGRa6RwFxHxIYW7iIgPKdxFRHxI4S4i4kMKdxERH1K4\ni4j4kMJdRMSH/j/ByRkJ6j6a+wAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f4b50034cf8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "X, Y = get_normalized_data()\n",
+    "\n",
+    "ann = ANN([500, 300], [0.8, 0.5, 0.5])\n",
+    "ann.fit(X, Y)"
    ]
   },
   {
@@ -266,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
